--- a/src/components/Chat/IndividualPortrait/IndividualPortrait.css
+++ b/src/components/Chat/IndividualPortrait/IndividualPortrait.css
@@ -1,7 +1,6 @@
 .individual-portrait-inner {
   overflow: hidden;
   position: relative;
-  min-height: 50vh;
 }
 
 .individual-portrait-img-container {
